@@ -9,6 +9,7 @@ import org.junit.jupiter.api.BeforeEach;
 
 import java.util.Arrays;
 import java.util.Scanner;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -24,7 +25,7 @@ class CoreSelectBuildingMenuControllerTest {
         user = new User("user", "Password@1", "n", "s", "e", "q", "a");
         user2 = new User("user2", "Password@1", "n", "s", "e", "q", "a");
         User[] users = new User[]{user, user2};
-        match = new Match(map, Arrays.stream(users).toList());
+        match = new Match(map, Arrays.stream(users).collect(Collectors.toList()));
         CoreMapEditMenuController coreMapEditMenuController =
                 new CoreMapEditMenuController(match, new Scanner(""));
         coreMapEditMenuController.dropBuilding(new Location(3, 3), CivilBuildingType.CHURCH);
